feat(*): add dark theme support

--- a/src/components/CodeBox.module.less
+++ b/src/components/CodeBox.module.less
@@ -28,8 +28,8 @@
 
 .omittedLabel {
   position: absolute;
-  background-color: #ffffffdd;
-  color: #00000088;
+  background-color: var(--theme-background-transparent);
+  color: var(--theme-foreground-transparent);
   right: 0;
   bottom: 0;
   padding: 14px 14px;
