--- a/src/components/ScoreText.module.less
+++ b/src/components/ScoreText.module.less
@@ -1,43 +1,43 @@
 .score_0 {
-  color: #ff4f4f;
+  color: var(--theme-score-0);
 }
 
 .score_1 {
-  color: #ff694f;
+  color: var(--theme-score-1);
 }
 
 .score_2 {
-  color: #f8603a;
+  color: var(--theme-score-2);
 }
 
 .score_3 {
-  color: #fc8354;
+  color: var(--theme-score-3);
 }
 
 .score_4 {
-  color: #fa9231;
+  color: var(--theme-score-4);
 }
 
 .score_5 {
-  color: #f7bb3b;
+  color: var(--theme-score-5);
 }
 
 .score_6 {
-  color: #ecdb44;
+  color: var(--theme-score-6);
 }
 
 .score_7 {
-  color: #e2ec52;
+  color: var(--theme-score-7);
 }
 
 .score_8 {
-  color: #b0d628;
+  color: var(--theme-score-8);
 }
 
 .score_9 {
-  color: #93b127;
+  color: var(--theme-score-9);
 }
 
 .score_10 {
-  color: #25ad40;
+  color: var(--theme-score-10);
 }
