--- a/src/components/StatusText.module.less
+++ b/src/components/StatusText.module.less
@@ -7,81 +7,77 @@
 }
 
 .Pending {
-  color: #6cf;
+  color: var(--theme-status-pending);
 }
 
 .ConfigurationError {
-  color: #e28989;
+  color: var(--theme-status-configuration-error);
 }
 
 .SystemError {
-  color: grey;
+  color: var(--theme-status-system-error);
 }
 
 .CompilationError {
-  color: #1679dc;
+  color: var(--theme-status-compilation-error);
 }
 
 .Canceled {
-  color: #676fc1;
+  color: var(--theme-status-canceled);
 }
 
 .FileError {
-  color: darkorchid;
+  color: var(--theme-status-file-error);
 }
 
 .RuntimeError {
-  color: darkorchid;
+  color: var(--theme-status-runtime-error);
 }
 
 .TimeLimitExceeded {
-  color: sandybrown;
+  color: var(--theme-status-time-limit-exceeded);
 }
 
 .MemoryLimitExceeded {
-  color: sandybrown;
+  color: var(--theme-status-memory-limit-exceeded);
 }
 
 .OutputLimitExceeded {
-  color: sandybrown;
-}
-
-.InvalidInteraction {
-  color: darkorchid;
+  color: var(--theme-status-output-limit-exceeded);
 }
 
 .PartiallyCorrect {
-  color: #01bab2;
+  color: var(--theme-status-partially-correct);
 }
 
 .WrongAnswer {
-  color: #ff4f4f;
+  color: var(--theme-status-wrong-answer);
 }
 
 .Accepted {
-  color: #25ad40;
+  color: var(--theme-status-accepted);
 }
 
 .JudgementFailed {
-  color: #FF5722;
+  color: var(--theme-status-judgement-failed);
 }
 
 .Waiting {
-  color: grey;
+  color: var(--theme-status-waiting);
 }
 
 .Preparing {
-  color: #de4d9e;
+  color: var(--theme-status-preparing);
 }
 
 .Compiling {
-  color: #00b5ad;
+  color: var(--theme-status-compiling);
 }
 
 .Running {
-  color: #6cf;
+  color: var(--theme-status-running);
 }
 
 .Skipped {
-  color: #78909C;
+  color: var(--theme-status-skipped);
 }
