--- a/src/pages/problem/judge-settings/common/CheckerEditor.module.less
+++ b/src/pages/problem/judge-settings/common/CheckerEditor.module.less
@@ -28,7 +28,7 @@
   .description {
     // margin-top: -10px;
     font-size: 13px;
-    color: rgba(0, 0, 0, 0.4);
+    color: var(--theme-description-message-foreground);
   }
 
   .custom {
