--- a/src/pages/problem/judge-settings/common/ExtraSourceFilesEditor.module.less
+++ b/src/pages/problem/judge-settings/common/ExtraSourceFilesEditor.module.less
@@ -6,7 +6,7 @@
   .language {
     width: 110px !important;
     flex-grow: 0 !important;
-    background: white !important;
+    background: var(--theme-background) !important;
   }
 
   :global(#root) & .dropdown {
