--- a/src/pages/problem/problem-set/ProblemTagManager.module.less
+++ b/src/pages/problem/problem-set/ProblemTagManager.module.less
@@ -67,7 +67,7 @@
   padding-left: 21px;
   margin-top: -21px;
   margin-left: -21px;
-  border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+  border-bottom: 1px solid var(--theme-border);
 
   &.noTags {
     display: flex;
