--- a/src/pages/problem/view/common/FileChooser.module.less
+++ b/src/pages/problem/view/common/FileChooser.module.less
@@ -12,7 +12,7 @@
 .message {
   margin-top: 8px;
   white-space: pre-wrap;
-  color: rgba(0, 0, 0, 0.4);
+  color: var(--theme-description-message-foreground);
 
   a {
     display: inline-block;
