--- a/src/components/CodeEditor.module.less
+++ b/src/components/CodeEditor.module.less
@@ -1,5 +1,5 @@
 .editorContainer {
-  border: 1px solid rgba(34, 36, 38, 0.15);
+  border: 1px solid var(--theme-border);
   width: 100%;
   height: 100%;
   position: relative;
@@ -13,7 +13,6 @@
   }
 
   &:focus-within {
-    border-color: #85b7d9;
-    box-shadow: inset 0 0 0 0 rgba(34, 36, 38, 0.35);
+    border-color: var(--theme-input-border-focus);
   }
 }
