--- a/src/pages/home/home/HomePage.module.less
+++ b/src/pages/home/home/HomePage.module.less
@@ -53,7 +53,7 @@
   margin-top: 14px;
   text-align: right;
   font-size: 0.95em;
-  color: #666;
+  color: var(--theme-secondary-title);
 
   &::before {
     content: "——";
@@ -66,7 +66,7 @@
 }
 
 .search {
-  width: 100% !important;
+  min-width: 100% !important;
 }
 
 .countdown {
