--- a/src/pages/problem/edit/ProblemEditPage.module.less
+++ b/src/pages/problem/edit/ProblemEditPage.module.less
@@ -69,12 +69,12 @@
         textarea {
           border-radius: 0 !important;
           border: none !important;
-          border-bottom: 1px solid rgba(34, 36, 38, 0.15) !important;
+          border-bottom: 1px solid var(--theme-border) !important;
           resize: none !important;
         }
 
         &:first-child textarea {
-          border-right: 1px solid rgba(34, 36, 38, 0.15) !important;
+          border-right: 1px solid var(--theme-border) !important;
         }
       }
     }
