--- a/src/pages/user/groups/GroupsPage.module.less
+++ b/src/pages/user/groups/GroupsPage.module.less
@@ -28,7 +28,7 @@
 
 .groupItem {
   padding: 11px 0 !important;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: 1px solid var(--theme-border);
 }
 
 .usernameCellContainer {
