feat(user): new preview code for font and format settings

--- a/src/pages/user/edit/UserEdit.module.less
+++ b/src/pages/user/edit/UserEdit.module.less
@@ -158,6 +158,17 @@
   }
 }
 
+.scrollableCodeBoxSegment {
+  pre {
+    overflow-y: auto !important;
+    overflow-y: overlay !important;
+  }
+}
+
+.formatPreviewCodeBoxSegment {
+  height: 520px;
+}
+
 .privilegeRow {
   display: flex;
   margin-top: 12px;
@@ -338,8 +349,6 @@
 
       pre {
         max-height: 250px !important;
-        overflow-y: auto !important;
-        overflow-y: overlay !important;
       }
     }
 
