refactor(markdown): switch mathjax output from svg to chtml

--- a/src/markdown/MarkdownContent.module.less
+++ b/src/markdown/MarkdownContent.module.less
@@ -70,4 +70,15 @@
       padding-left: 24px;
     }
   }
+
+  mjx-container[jax="CHTML"] {
+    font-size: 1.15em;
+
+    :global(.copy) {
+      display: inline-block;
+      width: 0;
+      height: 0;
+      font-size: 0;
+    }
+  }
 }
